--- a/data/XBee.tex
+++ b/data/XBee.tex
@@ -533,3 +533,43 @@ Channel and PAN ID 需要一致，一个Coordinator CE=1 Form Network，多个Ro
 可以Mesh组网，鲁棒性强，适合对通信可靠性要求高的微型电网供电设备。
 
 传输距离远，可以达到3km以上，适合城市内智能电网设备。
+
+
+\section{Python3 Xbee开发}
+
+目前主流的Python库有XBee 2.3.2\footnote{\url{https://pypi.org/project/XBee/}}和digi-xbee 1.3.0(Digi XBee Python library)\footnote{\url{https://github.com/digidotcom/xbee-python}}
+
+其中XBee 2.3.2可以使用pip安装：
+
+\begin{tcolorbox}
+    pip install xbee
+\end{tcolorbox}
+
+XBee库提供了写入并发送API frame的简单函数，不过参数需要自己查表写，比如：
+
+\begin{minted}[breaklines,linenos,python3]{python}
+    #! /usr/bin/python
+
+    # Import and init an XBee device
+    from xbee import XBee, ZigBee
+    import serial
+
+    ser = serial.Serial('/dev/ttyUSB0', 9600)
+
+    # Use an XBee 802.15.4 device
+    xbee = XBee(ser)
+    # To use with an XBee ZigBee device, replace with:
+    # xbee = ZigBee(ser)
+
+    # Set remote DIO pin 2 to low (mode 4)
+    xbee.remote_at(
+        dest_addr=b'\x56\x78',
+        command='D2',
+        parameter=b'\x04')
+
+    xbee.remote_at(
+        dest_addr=b'\x56\x78',
+        command='WR')
+\end{minted}
+
+而digi-xbee则有更丰富的函数和例程来帮助我们封装Data Frame。
