xbplib_diagram_network

--- a/data/XBee.tex
+++ b/data/XBee.tex
@@ -537,6 +537,13 @@ Channel and PAN ID 需要一致，一个Coordinator CE=1 Form Network，多个Ro
 
 \section{Python3 Xbee开发}
 
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{xbplib_diagram_network.png}
+    \caption{XBee Python library}
+    \label{fig:xbplib_diagram_network}
+\end{figure}
+
 目前主流的Python库有XBee 2.3.2\footnote{\url{https://pypi.org/project/XBee/}}和digi-xbee 1.3.0(Digi XBee Python library)\footnote{\url{https://github.com/digidotcom/xbee-python}}
 
 其中XBee 2.3.2可以使用pip安装：
