--- a/data/XBee.tex
+++ b/data/XBee.tex
@@ -596,3 +596,18 @@ digi-xbee 1.3.0可以使用pip安装：
 
 详细文档见XBee Python Library Documents\footnote{\url{https://xbplib.readthedocs.io/en/stable/}}
 
+\section{joystick 输入}
+
+可以参考Jetbot的Jupyter Notebooks的代码(\url{https://github.com/NVIDIA-AI-IOT/jetbot/blob/master/notebooks/basic_motion/basic_motion.ipynb})。
+
+在\url{https://html5gamepad.com/}可以测试游戏手柄，识别型号和序号(Index 在存在多个游戏手柄的时候需要指定)。比如我的手柄就是Xbox 360 Controller (XInput STANDARD GAMEPAD) INDEX = 0
+
+如图~\ref{fig:HTML5GamepadTester}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{HTML5GamepadTester.png}
+    \caption{HTML5GamepadTester}
+    \label{fig:HTML5GamepadTester}
+\end{figure}
+
