--- a/data/Environment.tex
+++ b/data/Environment.tex
@@ -356,3 +356,16 @@ STM32CubeMX 需要配合 64 位 Java 使用，在\url{https://java.com/zh_CN/dow
 \section{XBee环境}
 
 Digi XCTU\footnote{\url{https://www.digi.com/xbee/software}} 提供了config的图形化界面。
+
+\section{Python3.8环境配置}
+
+安装Python时记得勾选初始页面下方的添加到PATH。
+
+计算机上可能有多个版本的Python，在CMD中使用where python命令查看，在
+
+VS Code中有Python插件，具体使用方法参考\url{https://code.visualstudio.com/docs/languages/python}。
+
+注意左下角的Python interpreter要选成希望使用的版本对应的解释器，最好是PATH的第一个，防止出现pip包找不到的情况。Jupyter Notebook/Lab 同理。
+
+之后可以点右上角运行来执行脚本，和在Windows PowerShell里直接运行等价。
+
