--- a/data/Environment.tex
+++ b/data/Environment.tex
@@ -369,3 +369,4 @@ VS Code中有Python插件，具体使用方法参考\url{https://code.visualstud
 
 之后可以点右上角运行来执行脚本，和在Windows PowerShell里直接运行等价。
 
+需要加断点看变量Debug可以使用VS Code左侧的Debug选项卡，根据向导创建一个launch.json，选Python-Python File即可。
