--- a/data/XBee.tex
+++ b/data/XBee.tex
@@ -612,3 +612,5 @@ digi-xbee 1.3.0可以使用pip安装：
 \end{figure}
 
 \section{Python XBee TX 代码编写}
+
+在NetworkModificationsSample.py示例中使用了try-finally异常处理，无论try是否发生异常，finally总会执行。这保证了最终端口关闭且删除callback。
