--- a/data/Appendix-Code.tex
+++ b/data/Appendix-Code.tex
@@ -52,3 +52,21 @@
 \section{Jupyter Lab UI 界面}
 \label{sec:JupyterLabUI-Code}
 \inputminted[mathescape, linenos, breaklines]{python3}{Code/UI.py}
+
+\section{XBee发送数据}
+
+\subsection{NetworkModificationsSample}
+\label{sec:NetworkModificationsSample}
+\inputminted[mathescape, linenos, breaklines]{python3}{Code/NetworkModificationsSample/NetworkModificationsSample.py}
+
+\subsection{SendDataSample}
+\label{sec:SendDataSample}
+\inputminted[mathescape, linenos, breaklines]{python3}{Code/SendDataSample/SendDataSample.py}
+
+\subsection{SendDataAsyncSample}
+\label{sec:SendDataAsyncSample}
+\inputminted[mathescape, linenos, breaklines]{python3}{Code/SendDataAsyncSample/SendDataAsyncSample.py}
+
+\subsection{SendBroadcastDataSample}
+\label{sec:SendBroadcastDataSample}
+\inputminted[mathescape, linenos, breaklines]{python3}{Code/SendBroadcastDataSample/SendBroadcastDataSample.py}
