--- a/data/XBee.tex
+++ b/data/XBee.tex
@@ -611,6 +611,8 @@ digi-xbee 1.3.0可以使用pip安装：
     \label{fig:HTML5GamepadTester}
 \end{figure}
 
+用\mintinline{python}{import ipywidgets.widgets as widgets}和\mintinline{python}{controller = widgets.Controller(index=0)}来导入一个Controller，\mintinline{python}{display(controller)}来显示。
+
 \section{Python XBee TX 代码编写}
 
 在NetworkModificationsSample.py示例中使用了try-finally异常处理，无论try是否发生异常，finally总会执行。这保证了最终端口关闭且删除callback。例程源码如附录~\ref{sec:NetworkModificationsSample}所示。
@@ -628,5 +630,3 @@ digi-xbee 1.3.0可以使用pip安装：
 \mintinline{python}{send_data_broadcast(String or Bytearray, Integer)}方法(Method)可以实现广播(Broadcast transmissions)，即向网络中所有其他节点广播信息。例程源码如附录~\ref{sec:SendBroadcastDataSample}所示。
 
 根据需求可以选用以上发送方式。尝试了三种方式之后，发现异步通信最适合，由于在本应用中信息连续性并不重要，丢小部分包也是可以容忍的，而且需要PC端的Python脚本持续运行，后续要接收发回来的位置数据，所以选择异步通信。
-
-\mintinline{python}{}
