--- a/data/XBee.tex
+++ b/data/XBee.tex
@@ -630,3 +630,11 @@ digi-xbee 1.3.0可以使用pip安装：
 \mintinline{python}{send_data_broadcast(String or Bytearray, Integer)}方法(Method)可以实现广播(Broadcast transmissions)，即向网络中所有其他节点广播信息。例程源码如附录~\ref{sec:SendBroadcastDataSample}所示。
 
 根据需求可以选用以上发送方式。尝试了三种方式之后，发现异步通信最适合，由于在本应用中信息连续性并不重要，丢小部分包也是可以容忍的，而且需要PC端的Python脚本持续运行，后续要接收发回来的位置数据，所以选择异步通信。
+
+
+
+\section{PC 端 Python 代码整合}
+
+困扰我很久的widgets.FloatSlider如何不借助定义函数和在其中使用全局变量提取出实时的数据问题可以通过Traitlets\footnote{\url{https://github.com/ipython/traitlets}}变量来解决！
+
+使用traitlets.link来双向链接变量的值，改变其中一个也会改变另一个，traitlets.dlink单向链接，前因后果(The left input is the source and the right input is the target)
