--- a/data/XBee.tex
+++ b/data/XBee.tex
@@ -638,3 +638,9 @@ digi-xbee 1.3.0可以使用pip安装：
 困扰我很久的widgets.FloatSlider如何不借助定义函数和在其中使用全局变量提取出实时的数据问题可以通过Traitlets\footnote{\url{https://github.com/ipython/traitlets}}变量来解决！
 
 使用traitlets.link来双向链接变量的值，改变其中一个也会改变另一个，traitlets.dlink单向链接，前因后果(The left input is the source and the right input is the target)
+
+尝试了一整天没搞定traitlets.link，因为它需要link的两个参数必须是HasTrait类。
+
+直接使用left_slider.value可以调用，但需要写到循环里面。
+
+但是controller.axes[1].value写到循环里面并不会更新值，所以用Pygame的pygame.joystick.Joystick.get_axis()来写。
