--- a/data/UI.tex
+++ b/data/UI.tex
@@ -5,7 +5,28 @@
 
 \section{实物可视化界面}
 
-每一个小车代表一个机组/节点，小车在坐标系中位置代表各自出力，随着迭代次数进行变化。（不一定是位置，也可能是颜色，坐标系也可能会是二维的），新加进去的或者撤出来就会重新平衡。
+每一个小车代表一个机组/节点，小车在坐标系中位置代表各自出力，随着迭代次数进行变化。（不一定是位置，也可能是颜色，坐标系也可能会是二维的），新加进去的或者撤出来就会重新平衡。物理场景和算法的映射关系如表~\ref{tab:Real-Unreal}。
+
+% Please add the following required packages to your document preamble:
+% \usepackage{booktabs}
+\begin{table}[htbp]
+    \centering
+    \begin{tabular}{@{}ll@{}}
+    \toprule
+    物理场景          & 算法                   \\ \midrule
+    桌面            & 二维坐标系                \\
+    前后            & 纵轴——电价指数（可能会经过一系列变换） \\
+    左右            & 横轴——节点数（均匀分布）        \\
+    小车            & 通信节点（拓扑中的点）          \\
+    摆放小车          & 设定初始节点数和各节点初始值       \\
+    小车运动          & 电价指数改变               \\
+    停止在Y坐标相同的一条线上 & 迭代完成，各节点达成共识         \\
+    移除小车          & 断开一个节点               \\
+    放入小车          & 新增一个节点后自动重新开始迭代      \\ \bottomrule
+    \end{tabular}
+    \caption{物理场景和算法的映射关系}
+    \label{tab:Real-Unreal}
+\end{table}
 
 \section{JupyterLab环境配置}
 
