--- a/data/XBee.tex
+++ b/data/XBee.tex
@@ -643,4 +643,4 @@ digi-xbee 1.3.0可以使用pip安装：
 
 直接使用\mintinline{python}{left_slider.value}可以调用，但需要写到循环里面。
 
-但是controller.axes[1].value写到循环里面并不会更新值，所以用Pygame的pygame.joystick.Joystick.get_axis()来写。
+但是controller.axes[1].value写到循环里面并不会更新值，所以用Pygame的\mintinline{python}{pygame.joystick.Joystick.get_axis()}来写。
