--- a/data/Model.tex
+++ b/data/Model.tex
@@ -165,6 +165,15 @@ v4的PCB支撑柱容易断裂，所以改用M3双通六角铜柱，如图~\ref{f
 
 综合螺丝和铜柱的参数，考虑到3D打印机的打印误差，设计孔为4mm直径的圆孔。
 
+实物装配图如图~\ref{fig:Bottom-v5}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{Bottom-v5.jpg}
+    \caption{v5底盘实物装配图}
+    \label{fig:Bottom-v5}
+\end{figure}
+
 \section{3D打印}
 
 使用极光尔沃 A3S 3D打印机（如图~\ref{fig:A3S}）进行打样。详细参数如表~\ref{tab:A3S}。
