--- a/data/Environment.tex
+++ b/data/Environment.tex
@@ -371,7 +371,28 @@ VS Code中有Python插件，具体使用方法参考\url{https://code.visualstud
 
 需要加断点看变量Debug可以使用VS Code左侧的Debug选项卡，根据向导创建一个launch.json，选Python-Python File即可。
 
-% \section{物理环境}
+\section{物理环境}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{RealEnvironment1.jpg}
+    \caption{RealEnvironment1}
+    \label{fig:RealEnvironment1}
+\end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{RealEnvironment2.jpg}
+    \caption{RealEnvironment2}
+    \label{fig:RealEnvironment2}
+\end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{RealEnvironment3.jpg}
+    \caption{RealEnvironment3}
+    \label{fig:RealEnvironment3}
+\end{figure}
 
 % RealEnvironment1.jpg
 % RealEnvironment2.jpg
