--- a/data/Environment.tex
+++ b/data/Environment.tex
@@ -376,21 +376,21 @@ VS Code中有Python插件，具体使用方法参考\url{https://code.visualstud
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=\columnwidth]{RealEnvironment1.jpg}
-    \caption{RealEnvironment1}
+    \caption{焊接 贴片 环境}
     \label{fig:RealEnvironment1}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=\columnwidth]{RealEnvironment2.jpg}
-    \caption{RealEnvironment2}
+    \caption{3D打印和装配环境}
     \label{fig:RealEnvironment2}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=\columnwidth]{RealEnvironment3.jpg}
-    \caption{RealEnvironment3}
+    \caption{XBee通信调试环境}
     \label{fig:RealEnvironment3}
 \end{figure}
 
