--- a/data/Simple.tex
+++ b/data/Simple.tex
@@ -394,6 +394,14 @@ $u_{\mathrm{i}}(t)$为$x_{\mathrm{i}}(t)$的控制变量，服从：
     \label{tab:2224}
 \end{table}
 
+整个Illustration过程如图~\ref{fig:123-2224}所示。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{123-2224.pdf}
+    \caption{纠正后的强连通图迭代曲线}
+    \label{fig:123-2224}
+\end{figure}
 
 \section{动画Illustration设计}
 
