--- a/data/Simple.tex
+++ b/data/Simple.tex
@@ -417,6 +417,32 @@ $u_{\mathrm{i}}(t)$为$x_{\mathrm{i}}(t)$的控制变量，服从：
 小车外形（包括电池）可以近似视为直径100mm、高80mm的圆柱体，整体画布设置为1m*1m的网格坐标平面；横轴相邻间距相等，为20cm；纵轴按照1:30cm缩放比例，即第一个小车初始位置为(1,1)对应到物理坐标系中是(0,30cm)。
 
 
-时序方面，为了保证视频质量，C4D工程设置里我设置了帧速率(FPS)为60，即60帧/s，虽然这样渲染时间会变长。C4D做动画时间轴是按帧来的，所以下面的剧本将以帧为单位来写，目前想做的是运动1s停顿1s，再进行下一次迭代。放入新小车时用2s从上向下放入。
+时序方面，为了保证视频质量，C4D工程设置里我设置了帧速率(FPS)为60，即60帧/s，虽然这样渲染时间会变长。C4D做动画时间轴是按帧来的，所以下面的剧本将以帧为单位来写，目前想做的是运动1s停顿1s，再进行下一次迭代。放入新小车时用1s从上向下放入，放完一秒之后再开始运动。
 
-各状态开始时间和对应的帧如表
+各状态开始时间和对应的帧如表~\ref{tab:IllustrationDesign}
+
+\begin{table}[htbp]
+    \centering
+    \begin{tabular}{|l|l|l|l|l|l|l|}
+    \hline
+    \diagbox{迭代次数}{$Y_{i,j}$}{节点编号} %添加斜线表头
+              & 1     & 2    & 3   & 4     & Arrival Time & Frame \\ \hline
+    0         & 30    & 60   & 90  &       & 0            & 0     \\ \hline
+    1         & 45    & 75   & 60  &       & 1            & 60    \\ \hline
+    2         & 60    & 68   & 53  &       & 3            & 180   \\ \hline
+    3         & 64    & 60   & 56  &       & 5            & 300   \\ \hline
+    4         & 62    & 58   & 60  &       & 7            & 420   \\ \hline
+    5         & 60    & 59   & 61  &       & 9            & 540   \\ \hline
+    6         & 60    & 60   & 60  &       & 11           & 660   \\ \hline
+    7         & 60    & 60   & 60  & 120   & 13           & 780   \\ \hline
+    8         & 60    & 60   & 80  & 90    & 15           & 900   \\ \hline
+    9         & 60    & 70   & 77  & 75    & 17           & 1020  \\ \hline
+    10        & 65    & 73   & 71  & 73    & 19           & 1140  \\ \hline
+    11        & 69    & 72   & 69  & 73    & 21           & 1260  \\ \hline
+    12        & 71    & 71   & 71  & 71    & 23           & 1380  \\ \hline
+    Color     & White & Blue & Red & Green &              &       \\ \hline
+    X-Axis/cm & 0     & 30   & 60  & 90    &              &       \\ \hline
+    \end{tabular}
+    \caption{各状态开始时间}
+    \label{tab:IllustrationDesign}
+\end{table}
