--- a/data/Simple.tex
+++ b/data/Simple.tex
@@ -405,13 +405,13 @@ $u_{\mathrm{i}}(t)$为$x_{\mathrm{i}}(t)$的控制变量，服从：
 
 \section{动画Illustration设计}
 
-整个Illustration过程如图~\ref{fig:123-2224}所示。
+整个Illustration过程如图~\ref{fig:IllustrationDesign}所示。
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics{123-2224.pdf}
+    \includegraphics{IllustrationDesign.pdf}
     \caption{纠正后的强连通图迭代曲线}
-    \label{fig:123-2224}
+    \label{fig:IllustrationDesign}
 \end{figure}
 
 小车外形（包括电池）可以近似视为直径100mm、高80mm的圆柱体，整体画布设置为1m*1m的网格坐标平面；横轴相邻间距相等，为20cm；纵轴按照1:30cm缩放比例，即第一个小车初始位置为(1,1)对应到物理坐标系中是(0,30cm)。
@@ -446,3 +446,4 @@ $u_{\mathrm{i}}(t)$为$x_{\mathrm{i}}(t)$的控制变量，服从：
     \caption{各状态开始时间}
     \label{tab:IllustrationDesign}
 \end{table}
+
