--- a/data/Simple.tex
+++ b/data/Simple.tex
@@ -446,7 +446,7 @@ $u_{\mathrm{i}}(t)$为$x_{\mathrm{i}}(t)$的控制变量，服从：
     \label{tab:IllustrationDesign}
 \end{table}
 
-注意C4D的操作：调视角要按住视图右上角的按钮再拖，调时间轴也是按住小三角拖。
+注意C4D的操作：调视角要按住视图右上角的按钮再拖，调时间轴也是按住小三角拖。直线名为引导线。
 
 设定动画运动路径如图~\ref{fig:C4D-1}所示。
 
