--- a/data/Simple.tex
+++ b/data/Simple.tex
@@ -405,6 +405,8 @@ $u_{\mathrm{i}}(t)$为$x_{\mathrm{i}}(t)$的控制变量，服从：
 
 \section{动画Illustration设计}
 
+动画Illustration采用Cinema 4D R20 设计渲染。
+
 整个Illustration过程如图~\ref{fig:IllustrationDesign}所示。
 
 \begin{figure}[htbp]
