--- a/data/PCB-v3.tex
+++ b/data/PCB-v3.tex
@@ -11,10 +11,19 @@
 
 最好改成单面有贴片元件的形式，方便SMT或者制作钢网涂锡膏。
 
-选用没有ThermalVias的芯片封装，否则容易焊锡粘到了ThermalVias上引起不平整。
+选用没有ThermalVias的芯片封装，否则容易焊锡粘到了ThermalVias上引起不平整。(但是没有不含ThermalPad的封装)
 
 留出STEP和DIR测试/备用引脚，以便板上有一两片DRV8825无法正常使用可以外接模块。
 
 12V和5V供电太细了，要注意供电可靠性。
 
 扩大PCB面积，从100mm到120mm直径圆内接正六边形。
+
+Reset按钮封装不对。Reset电路中R22/D1,RESET BUTTON/C13不是必须的，可以画，可以不焊。
+
+！！！发现CH340C的TX接到了Mega的TX上，RX接到了Mega的RX上，所以烧录Arduino时出现错误：
+
+\begin{tcolorbox}
+    avrdude: stk500v2\_ReceiveMessage(): timeout \\
+    avrdude: stk500v2\_getsync(): timeout communicating with programmer
+\end{tcolorbox}
