--- a/data/Debug.tex
+++ b/data/Debug.tex
@@ -49,3 +49,24 @@
     \caption{实测时钟周期}
     \label{fig:DebugClock}
 \end{figure}
+
+目前是在我代码里面设定一个TimeScale为16来暂时解决。但感觉电机转动还是慢，不知道是不是我用的AVR的问题
+
+\section{电机不转解决方案}
+
+更换电机，排除电机本身问题：有一次是电机联轴器螺丝太长，卡在底盘上了。
+
+使用锂电池或足功率的开关电源，曾经用充电宝开关电源供电不足以三个电机一起转，出现接上三个反而总功耗比两个小的情况，以及电机发出轻微的吱吱声。
+
+检查Mega2560信号输出到DRV8825 STEP和DIR引脚回路，MCU是否输出PWM波。
+
+检查3.3V分压回路是否按照3：5分压，即设定额定电流值。
+
+检查DRV8825输出是否有密集的方波。如果有方波却转不了，也遇到过，问题未知，但之后那个8825就不输出波形了，可能是我测试的时候烧坏了
+也有可能是接触不良。
+
+用示波器对比不同DRV8825各引脚电压值，分析问题。
+
+如果输入正常，没有输出，可能是DRV8825焊接问题，注意看焊盘有没有和引脚良好接触，
+
+也很有可能是DRV8825坏了，需要使用堆锡后烙铁头左右横跳拆下来8825，并注意清理Thermal Via上面的锡（热风枪+吸锡器/刀头烙铁往旁边焊盘上拨，和清理连锡操作差不多，简单很多），其实很常见，基本每三个就有一个有问题，不知道是不是我从立创商城买的质量不好。
