电机不转解决方案

--- a/data/Debug.tex
+++ b/data/Debug.tex
@@ -69,4 +69,17 @@
 
 如果输入正常，没有输出，可能是DRV8825焊接问题，注意看焊盘有没有和引脚良好接触，
 
-也很有可能是DRV8825坏了，需要使用堆锡后烙铁头左右横跳拆下来8825，并注意清理Thermal Via上面的锡（热风枪+吸锡器/刀头烙铁往旁边焊盘上拨，和清理连锡操作差不多，简单很多），其实很常见，基本每三个就有一个有问题，不知道是不是我从立创商城买的质量不好。
+也很有可能是DRV8825坏了，需要使用堆锡后烙铁头左右横跳拆下来8825，并注意清理Thermal Via上面的锡（热风枪+吸锡器/刀头烙铁往旁边焊盘上拨，和清理连锡操作差不多，简单很多），其实很常见，基本每三个就有一个有问题，不知道是不是我从立创商城买的质量不好（后来发现并不是）。
+
+气，2020/4/22搞了一整天，换下来三片芯片，如图~\ref{fig:DebugDRV8825}。最后发现三个驱动轮流不输出，最后发现是电池没电了。。。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{DebugDRV8825.jpg}
+    \caption{误以为芯片问题而换下来的三片芯片}
+    \label{fig:DebugDRV8825}
+\end{figure}
+
+使用的2S锂电池额定电压为7.4V，充满电能到8V以上，用一段时间就会跌到7V左右，这时候电压会不足以驱动DRV8825，所以随着电池电压的升高降低出现时好时坏的情况。
+
+当即购买了3S的锂电，11.2V的额定电压足以驱动DRV8825。
