电机驱动电流参考电压

--- a/data/Debug.tex
+++ b/data/Debug.tex
@@ -119,3 +119,4 @@ V3.1版本的PCB一共做了5块，一个炸了钽电容（原因不明，我在
     \label{fig:DebugShortCircuit}
 \end{figure}
 
+2020/4/23调试的第四块PCB的3号电机驱动电流参考电压一直是0V，更换了30k 50k电阻无果，3.3V输出正常，目测引脚没有异样短路，原因未知，先使用两个电机测试。
