--- a/data/Overview.tex
+++ b/data/Overview.tex
@@ -5,7 +5,9 @@
 
 介绍和背景 INTRODUCTION
 
-an open-source open-hardware platform for developing tabletop swarm interfaces.
+定位： an open-source open-hardware platform for developing tabletop swarm interfaces.
+
+for Smart Grid Technology Development Test and Evaluation
 
 In summary, our contributions are:
 
