--- a/data/Overview.tex
+++ b/data/Overview.tex
@@ -7,7 +7,7 @@
 
 定位： an open-source open-hardware platform for developing tabletop swarm interfaces.
 
-for Smart Grid Technology Development Test and Evaluation
+Test Platform for Smart Grid Technology Development
 
 In summary, our contributions are:
 
