--- a/data/Overview.tex
+++ b/data/Overview.tex
@@ -3,11 +3,13 @@
 
 \section{摘要}
 
+Misaka: A Visualized Swarm Testbed for Smart Grid Algorithm Evaluation
+
 介绍和背景 INTRODUCTION
 
-定位： an open-source open-hardware platform for developing tabletop swarm interfaces.
+定位： an open-source open-hardware swarm interfaces for Smart Grid Algorithm.
 
-Test Platform for Smart Grid Technology Development
+a Visualized Testbed for Smart Grid Algorithm Evaluation
 
 In summary, our contributions are:
 
