--- a/data/Debug.tex
+++ b/data/Debug.tex
@@ -103,7 +103,7 @@
 
 \section{其他问题}
 
-V3.1版本的PCB一共做了5块，一个炸了钽电容（原因不明，我在仔细查，但是不太敢贸然上电，去掉炸的电容后功率表测试空载功率远超正常板，如图~\ref{fig:DebugCapacitor}），还有一块MCU芯片引脚弯了连在了一起，所以能烧程序但没有输出，试着能不能抢救，用指甲刀剪掉了空置的短路弯曲引脚，如图~\ref{fig:DebugShortCircuit}，但是并没有解决问题，要用热风枪换芯片。
+V3.1版本的PCB一共做了5块，一个炸了钽电容（原因不明，我在仔细查，但是不太敢贸然上电，去掉炸的电容后功率表测试空载功率远超正常板，如图~\ref{fig:DebugCapacitor}）。
 
 \begin{figure}[htbp]
     \centering
@@ -111,6 +111,8 @@ V3.1版本的PCB一共做了5块，一个炸了钽电容（原因不明，我在
     \caption{去掉炸的电容后的板子}
     \label{fig:DebugCapacitor}
 \end{figure}
+
+还有一块MCU芯片引脚弯了连在了一起，所以能烧程序但没有输出，试着能不能抢救，用指甲刀剪掉了空置的短路弯曲引脚，如图~\ref{fig:DebugShortCircuit}，但是并没有解决问题，要用热风枪换芯片。
 
 \begin{figure}[htbp]
     \centering
