--- a/data/UI.tex
+++ b/data/UI.tex
@@ -28,6 +28,8 @@
     \label{tab:Real-Unreal}
 \end{table}
 
+初始DEMO UI为用PC通过XBee指定节点ID发送Move距离信息，节点收到后即开始运动相应距离，此过程中需要对Step和实际距离进行标定。
+
 \section{JupyterLab环境配置}
 
 本节代码详见附录~\ref{sec:JupyterLabUI-Code}。
