--- a/data/UI.tex
+++ b/data/UI.tex
@@ -28,7 +28,14 @@
     \label{tab:Real-Unreal}
 \end{table}
 
-初始DEMO UI为用PC通过XBee指定节点ID发送Move距离信息，节点收到后即开始运动相应距离，此过程中需要对Step和实际距离进行标定。
+初始DEMO UI为用PC通过XBee指定节点ID发送Move距离信息，节点收到后即开始运动相应距离，此过程中需要对Step和实际距离进行标定。首次标定得到1000steps约为15cm。如图~\ref{fig:MeasureSteps}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{MeasureSteps.jpg}
+    \caption{对Step和实际距离进行标定}
+    \label{fig:MeasureSteps}
+\end{figure}
 
 \section{JupyterLab环境配置}
 
