--- a/data/Simple.tex
+++ b/data/Simple.tex
@@ -454,7 +454,7 @@ $u_{\mathrm{i}}(t)$为$x_{\mathrm{i}}(t)$的控制变量，服从：
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics{C4D-1.png}
+    \includegraphics[width=\columnwidth]{C4D-1.png}
     \caption{C4D设定动画运动路径}
     \label{fig:C4D-1}
 \end{figure}
@@ -463,7 +463,7 @@ $u_{\mathrm{i}}(t)$为$x_{\mathrm{i}}(t)$的控制变量，服从：
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics{C4D-2.png}
+    \includegraphics[width=\columnwidth]{C4D-2.png}
     \caption{C4D设定网格坐标和渲染方法}
     \label{fig:C4D-2}
 \end{figure}
