--- a/data/Simple.tex
+++ b/data/Simple.tex
@@ -366,7 +366,7 @@ $u_{\mathrm{i}}(t)$为$x_{\mathrm{i}}(t)$的控制变量，服从：
 \begin{figure}[htbp]
     \centering
     \includegraphics{2224.pdf}
-    \caption{纠正后的强连通图迭代曲线}
+    \caption{稳态后加入新节点迭代10次曲线}
     \label{fig:2224}
 \end{figure}
 
@@ -399,11 +399,12 @@ $u_{\mathrm{i}}(t)$为$x_{\mathrm{i}}(t)$的控制变量，服从：
 \begin{figure}[htbp]
     \centering
     \includegraphics{123-2224.pdf}
-    \caption{纠正后的强连通图迭代曲线}
+    \caption{加入新节点曲线}
     \label{fig:123-2224}
 \end{figure}
 
 \section{动画Illustration设计}
+\label{sec:Illustration}
 
 动画Illustration采用Cinema 4D R20 设计渲染。
 
@@ -412,7 +413,7 @@ $u_{\mathrm{i}}(t)$为$x_{\mathrm{i}}(t)$的控制变量，服从：
 \begin{figure}[htbp]
     \centering
     \includegraphics{IllustrationDesign.pdf}
-    \caption{纠正后的强连通图迭代曲线}
+    \caption{IllustrationDesign}
     \label{fig:IllustrationDesign}
 \end{figure}
 
