--- a/data/UI.tex
+++ b/data/UI.tex
@@ -41,6 +41,8 @@
 
 采用的数据参照~\ref{sec:Illustration}小节中的数据设计，考虑到场地有限(宿舍桌面大小)，占用纵轴区间长度3对应45cm的可用桌面，比例0.5cm对应1单位，考虑到精度问题，只取0,1,2,3,8,9,10,13这几组变化较大的数据。
 
+对ForwardUnits进行1/6校准到单位位移，对Delay进行1/16校准到1ms。
+
 各状态开始时间和对应的帧如表~\ref{tab:UIDemoDesign}
 
 \begin{table}[htbp]
