--- a/data/UI.tex
+++ b/data/UI.tex
@@ -39,37 +39,53 @@
     \label{fig:MeasureSteps}
 \end{figure}
 
-采用的数据参照~\ref{sec:Illustration}小节中的数据设计，考虑到场地有限(宿舍桌面大小)，占用纵轴区间长度3对应45cm的可用桌面，比例0.5cm对应1单位，考虑到精度问题，只取0,1,2,3,8,9,10,13这几组变化较大的数据。
-
-对ForwardUnits进行1/6校准到单位位移，对Delay进行1/16校准到1ms。
-
-各状态开始时间和对应的帧如表~\ref{tab:UIDemoDesign}
+采用的数据参照~\ref{sec:Illustration}小节中的数据设计，考虑到场地有限(宿舍桌面大小)，占用纵轴区间长度3对应45cm的可用桌面，比例0.5cm对应1单位，考虑到精度问题，如表~\ref{tab:UIDemoDesign}，只取0,1,2,3,8,9,10,13这几组变化较大的数据，如表~\ref{tab:UIDemoDesignSelection}。
 
 \begin{table}[htbp]
     \centering
-    \begin{tabular}{|l|l|l|l|l|l|l|}
+    \begin{tabular}{|l|l|l|l|l|l|l|l|l|}
     \hline
-    \diagbox{迭代次数}{$Y_{i,j}$}{节点编号} %添加斜线表头
-              & 1     & 2    & 3   & 4     & Arrival Time & Frame \\ \hline
-    0         & 30    & 60   & 90  &       & 0            & 0     \\ \hline
-    1         & 45    & 75   & 60  &       & 1            & 60    \\ \hline
-    2         & 60    & 68   & 53  &       & 3            & 180   \\ \hline
-    3         & 64    & 60   & 56  &       & 5            & 300   \\ \hline
-    4         & 62    & 58   & 60  &       & 7            & 420   \\ \hline
-    5         & 60    & 59   & 61  &       & 9            & 540   \\ \hline
-    6         & 60    & 60   & 60  &       & 11           & 660   \\ \hline
-    7         & 60    & 60   & 60  & 120   & 13           & 780   \\ \hline
-    8         & 60    & 60   & 80  & 90    & 15           & 900   \\ \hline
-    9         & 60    & 70   & 77  & 75    & 17           & 1020  \\ \hline
-    10        & 65    & 73   & 71  & 73    & 19           & 1140  \\ \hline
-    11        & 69    & 72   & 69  & 73    & 21           & 1260  \\ \hline
-    12        & 71    & 71   & 71  & 71    & 23           & 1380  \\ \hline
-    Color     & White & Blue & Red & Green &              &       \\ \hline
-    X-Axis/cm & 0     & 30   & 60  & 90    &              &       \\ \hline
+    \diagbox{迭代次数}{$Y_{i,j}$}{节点编号与作差} %添加斜线表头
+       & 1  & 2  & 3  & 4   & d1 & d2 & d3  & d4  \\ \hline
+    0  & 0  & 0  & 0  & 0   &    &    &     &     \\ \hline
+    1  & 30 & 60 & 90 & 0   & 30 & 60 & 90  & 0   \\ \hline
+    2  & 45 & 75 & 60 & 0   & 15 & 15 & -30 & 0   \\ \hline
+    3  & 60 & 68 & 53 & 0   & 15 & -8 & -8  & 0   \\ \hline
+    4  & 64 & 60 & 56 & 0   & 4  & -8 & 4   & 0   \\ \hline
+    5  & 62 & 58 & 60 & 0   & -2 & -2 & 4   & 0   \\ \hline
+    6  & 60 & 59 & 61 & 0   & -2 & 1  & 1   & 0   \\ \hline
+    7  & 60 & 60 & 60 & 0   & 0  & 1  & 0   & 0   \\ \hline
+    8  & 60 & 60 & 60 & 120 & 0  & 0  & 0   & 120 \\ \hline
+    9  & 60 & 60 & 80 & 90  & 0  & 0  & 20  & -30 \\ \hline
+    10 & 60 & 70 & 77 & 75  & 0  & 10 & -3  & -15 \\ \hline
+    11 & 65 & 73 & 71 & 73  & 5  & 3  & -6  & -2  \\ \hline
+    12 & 69 & 72 & 69 & 73  & 4  & -1 & -1  & 0   \\ \hline
+    13 & 71 & 71 & 71 & 71  & 2  & -1 & 2   & -2  \\ \hline
     \end{tabular}
-    \caption{剧本}
+    \caption{节点位移比对}
     \label{tab:UIDemoDesign}
 \end{table}
+
+\begin{table}[htbp]
+    \centering
+    \begin{tabular}{|l|l|l|l|l|l|l|l|l|}
+    \hline
+    \diagbox{迭代次数}{$Y_{i,j}$}{节点编号与作差} %添加斜线表头
+      & 1  & 2  & 3  & 4   & d1 & d2 & d3  & d4  \\ \hline
+    0 & 30 & 30 & 30 & 120 &    &    &     &     \\ \hline
+    1 & 30 & 60 & 90 & 120 & 0  & 30 & 60  & 0   \\ \hline
+    2 & 45 & 75 & 60 & 120 & 15 & 15 & -30 & 0   \\ \hline
+    3 & 60 & 68 & 53 & 120 & 15 & -8 & -8  & 0   \\ \hline
+    4 & 60 & 60 & 60 & 120 & 0  & -8 & 8   & 0   \\ \hline
+    5 & 60 & 60 & 80 & 90  & 0  & 0  & 20  & -30 \\ \hline
+    6 & 60 & 70 & 77 & 75  & 0  & 10 & -3  & -15 \\ \hline
+    7 & 71 & 71 & 71 & 71  & 11 & 1  & -6  & -4  \\ \hline
+    \end{tabular}
+    \caption{节点位移选取}
+    \label{tab:UIDemoDesignSelection}
+\end{table}
+
+对ForwardUnits进行1/6校准到单位位移，对Delay进行1/16校准到1ms。
 
 \section{JupyterLab环境配置}
 
