--- a/data/UI.tex
+++ b/data/UI.tex
@@ -91,6 +91,8 @@
 
 我们知道，1step对应放缩后的1ms，ForwardUnits(30) 对应的时间为1s，由此设计开始运动时间间隔为3s。减去相应的移动时间即为两次移动中间应当delay的时间。
 
+此Demo小车端代码详见附录~\ref{sec:MisakaCarV1}。
+
 \section{JupyterLab环境配置}
 
 本节代码详见附录~\ref{sec:JupyterLabUI-Code}。
