--- a/data/Appendix-Code.tex
+++ b/data/Appendix-Code.tex
@@ -74,3 +74,43 @@
 \section{实物可视化界面DEMO源码}
 \label{sec:MisakaCarV1}
 \inputminted[mathescape, linenos, breaklines]{c}{Code/MisakaCarV1/MisakaCarV1.ino}
+
+% 以下为非必须
+
+\section{DRV8825驱动微型步进电机加速及定距移动测试}
+
+\subsection{3步进电机加速测试}
+\label{sec:Stepper-3}
+\inputminted[mathescape, linenos, breaklines]{c}{Code/Stepper-3/Stepper-3.ino}
+
+\subsection{坐标变换及运动函数封装}
+\label{sec:Stepper-3-v2}
+\inputminted[mathescape, linenos, breaklines]{c}{Code/Stepper-3-v2/Stepper-3-v2.ino}
+
+
+\section{TB6612FNG}
+\label{sec:TB6612FNG-Functionality-Test}
+\inputminted[mathescape, linenos, breaklines]{c}{Code/TB6612FNG-Functionality-Test/TB6612FNG-Functionality-Test.ino}
+
+\section{Arduino as ISP}
+\label{sec:ArduinoISP}
+\inputminted[mathescape, linenos, breaklines]{c}{Code/ArduinoISP/ArduinoISP.ino}
+
+\section{WS2812B}
+\label{sec:WS2812B-Functionality-Test}
+\inputminted[mathescape, linenos, breaklines]{c}{Code/WS2812B-Functionality-Test/WS2812B-Functionality-Test.ino}
+
+
+\section{XBee通信 RX and TX}
+
+\subsection{接收Frame数据包}
+\label{sec:Series2_Rx}
+\inputminted[mathescape, linenos, breaklines]{c}{Code/Series2_Rx/Series2_Rx.ino}
+
+\subsection{接收Frame数据包并通过软件串口发送}
+\label{sec:Series2_Rx_Nss}
+\inputminted[mathescape, linenos, breaklines]{c}{Code/Series2_Rx_Nss/Series2_Rx_Nss.ino}
+
+\subsection{发送Frame数据包}
+\label{sec:Series2_Tx}
+\inputminted[mathescape, linenos, breaklines]{c}{Code/Series2_Tx/Series2_Tx.ino}
